--- a/second.html
+++ b/second.html
@@ -37,7 +37,7 @@
 
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(128,128,128);">
         <img class="d-block mx-auto mb-4" src="2ndyear.png" alt="" width="100" height="100">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive; color: white;">Welcome to 2nd
+        <h1 class="display-5 fw-bold text-body-emphasis" style="color: white;">Welcome to 2nd
             year.</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">
@@ -52,7 +52,7 @@
     </div>
 
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(255, 163, 26);">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive;">FIRST SEM</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive;">Third SEM</h1>
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page"
