--- a/first.html
+++ b/first.html
@@ -37,14 +37,14 @@
 
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(128,128,128);">
         <img class="d-block mx-auto mb-4" src="1styear.png" alt="" width="100" height="100">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive; color: white;">Chaliye toh phir
+        <h1 class="display-5 fw-bold text-body-emphasis" style="color: white;">Chaliye toh phir
             shuru krte hai
             engineering.</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">
             <ul style="list-style: none;">
                 <li>
-                    <h3>Fisrt year hai, so enjoy too!!</h3>
+                    <h3>First year hai, so enjoy too!!</h3>
                 </li>
             </ul>
             </p>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(255, 163, 26);">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive;">FIRST SEM</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">FIRST SEM</h1>
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page"
@@ -88,8 +88,8 @@
     </div>
     <hr>
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(255, 163, 26);">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive;">SECOND SEM</h1>
-        <h3 style="font-family: cursive;">Congrats! You succesfully survived 1st sem</h3>
+        <h1 class="display-5 fw-bold text-body-emphasis">SECOND SEM</h1>
+        <h3>Congrats! You succesfully survived 1st sem</h3>
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page"
