--- a/second.html
+++ b/second.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(255, 163, 26);">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive;">Third SEM</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">Third SEM</h1>
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page"
@@ -60,7 +60,7 @@
                     target="_blank" style="color: black; font-size: 20px;">Syllabus</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="nm/" target="_blank" style="color: black; font-size: 20px;">Numerical Methods</a>
+                <a class="nav-link" href="soon.html" target="_blank" style="color: black; font-size: 20px;">Numerical Methods</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="Thermodynamics (Solution) By P.K Nag.pdf" target="_blank" style="color: black; font-size: 20px;">Thermodynamics</a>
@@ -74,7 +74,7 @@
                 <a class="nav-link" href="som.pdf" target="_blank" style="color: black; font-size: 20px;">SOM</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="mp/" target="_blank" style="color: black; font-size: 20px;">Manufacturing
+                <a class="nav-link" href="soon.html" target="_blank" style="color: black; font-size: 20px;">Manufacturing
                     Process</a>
             </li>
             <li class="nav-item">
