--- a/second.html
+++ b/second.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(255, 163, 26);">
-        <h1 class="display-5 fw-bold text-body-emphasis">Third SEM</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">THIRD SEM</h1>
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page"
