--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
             <p class="lead mb-4" style="color:red; font-family: cursive;">Only mechanical department papers</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="https://www.bitmesra.ac.in/Visit_Other_Department_9910?cid=1&deptid=258&pid=452"
-                        target="_blank" style="text-decoration: none; color: white;"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Click here</button></a>
+                        target="_blank" style="text-decoration: none; color: white;">
+                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Click here</button>
+                </a>
             </div>
         </div>
     </div>
