--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: 'Times New Roman', Times, serif;">Session
             wise past sessions question papers here!</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4" style="color:red; font-family: cursive;">Only mechanical department papers</p>
+            <p class="lead mb-4" style="color:red;">Only mechanical department papers</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="https://www.bitmesra.ac.in/Visit_Other_Department_9910?cid=1&deptid=258&pid=452"
                         target="_blank" style="text-decoration: none; color: white;">
