--- a/first.html
+++ b/first.html
@@ -123,7 +123,7 @@
         </ul>
     </div>
     <div class="px-4 py-5 my-5 text-center" style="background-color: rgb(255, 163, 26);">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: cursive;">PYQ</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">PYQ</h1>
         <hr>
         <ul class="nav flex-column">
             <li class="nav-item">
